ncc/testsuite/positive/Issue-git-0233.n
using System.Console;

public class A
{
  public static @!=(a : A, b : A) : bool
  {
    WriteLine("OK");
    a : object == b
  }
  
  public static @:(a : object) : A
  {
    a :> A
  }
  
  static Main() : void
  {
    def x = A();
    
    _ = x != null;
  }
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/
