ncc/testsuite/negative/void-parm3.n
class A {
  public F[A, B] (_ : A -> B) : void {}
  public G[A] (_ : A) : void {}
  public Q () : void {
    def f (_) {};
    _ = F (f); //E: cannot use `void' in generic specifier 
    _ = G (f (0)); //E: cannot use `void' in generic specifier 
  }
}
()
